Fix layout on small screens

--- a/docs/src/style/mixins.scss
+++ b/docs/src/style/mixins.scss
@@ -1,3 +1,9 @@
+@mixin smartphone() {
+  @media (max-width: 600px) {
+    @content;
+  }
+}
+
 @mixin small-screen() {
   @media (max-width: 1024px) {
     @content;
